# manatan-headless

./: .gitattributes  .gitignore  .gitmodules  .public-release-stamp  Cargo.toml  Dockerfile  Makefile  README.md  changelog.txt  docker-compose.yml  ocr-cache.json
.github/: .public-release-stamp  FUNDING.yml
.github/scripts/: discord_announce.py
.github/workflows/: android_publish.yml  cleanup-artifacts.yml  core-rust.yml  discord-release-announce.yml  docker.yml  flatpak-repository.yml  jre.yml  publish.yml
WebUI/: .env.template  .public-release-stamp  package.json
WebUI/public/locales/: ar.json  de.json  en.json  es.json  fil.json  fr.json  id.json  it.json  ja.json  ko.json  nl.json  pl.json  pt-BR.json  pt.json  ru.json  ta.json  th.json  tr.json  uk.json  vi.json  zh_Hans.json  zh_Hant.json
WebUI/src/: App.tsx  index.css
WebUI/src/Manatan/: OCRManager.tsx  types.ts
WebUI/src/Manatan/components/: ChapterListInjector.tsx  ChapterProcessButton.tsx  CropperModal.tsx  DictionaryView.tsx  ImageOverlay.tsx  Pronunciation.tsx  SettingsInjector.tsx  SettingsModal.tsx  TextBox.tsx  YomitanPopup.tsx
WebUI/src/Manatan/context/: OCRContext.tsx
WebUI/src/Manatan/services/: ServerMetaStorage.ts
WebUI/src/Manatan/utils/: anki.ts  api.ts  cropper.ts  frequency.test.ts  frequency.ts  image.ts
WebUI/src/base/: AppRoute.constants.ts
WebUI/src/base/components/downloads/: DownloadStateIndicator.tsx
WebUI/src/base/components/feedback/: EmptyView.tsx  SnackbarWithDescription.tsx
WebUI/src/base/components/settings/: MutableListSetting.tsx
WebUI/src/base/utils/: Languages.ts
WebUI/src/features/anime/components/: AnimeGridCard.tsx  AnimeListCard.tsx  EpisodeList.tsx
WebUI/src/features/anime/screens/: AnimeDetails.tsx  AnimeLibrary.tsx
WebUI/src/features/app-updates/components/: VersionInfo.tsx
WebUI/src/features/authentication/: AuthManager.ts
WebUI/src/features/authentication/components/: AuthGuard.tsx
WebUI/src/features/backup/: Backup.types.ts
WebUI/src/features/backup/component/: BackupValidationDialog.tsx
WebUI/src/features/backup/screens/: Backup.tsx
WebUI/src/features/browse/extensions/: AnimeExtensions.tsx  Extensions.tsx
WebUI/src/features/browse/screens/: BrowseSettings.tsx
WebUI/src/features/browse/sources/: AnimeSources.tsx  Sources.tsx
WebUI/src/features/category/: Category.types.ts
WebUI/src/features/category/components/: CategoriesInclusionSetting.tsx  CategorySelect.tsx  CategorySettingsCard.tsx  CreateOrEditCategoryDialog.tsx
WebUI/src/features/category/screens/: CategorySettings.tsx
WebUI/src/features/category/services/: CategoryMetadata.ts  CategoryMetadataOverrides.ts
WebUI/src/features/chapter/: Chapter.types.ts
WebUI/src/features/chapter/components/: ChapterList.tsx
WebUI/src/features/chapter/services/: Chapters.ts
WebUI/src/features/chapter/utils/: ChapterList.util.tsx
WebUI/src/features/dictionary/: Dictionary.test.css  Dictionary.tsx
WebUI/src/features/downloads/components/: DownloadQueueChapterCard.tsx
WebUI/src/features/extension/: Extensions.types.ts  Extensions.utils.ts
WebUI/src/features/ln/: LN.types.ts
WebUI/src/features/manga/: Manga.constants.ts  Manga.types.ts
WebUI/src/features/metadata/: Metadata.types.ts
WebUI/src/features/migration/: Migration.types.ts
WebUI/src/features/navigation-bar/: DefaultNavBar.util.test.ts  DefaultNavBar.util.ts  DesktopSideBar.util.test.ts  DesktopSideBar.util.ts  NavigationBar.constants.ts  NavigationBar.hooks.ts  NavigationBar.util.ts
WebUI/src/features/reader/: Reader.utils.ts
WebUI/src/features/settings/: ImageProcessing.utils.ts  Settings.constants.ts  Settings.types.ts
WebUI/src/features/source/: Source.types.ts
WebUI/src/features/sync/: Sync.constants.ts  Sync.types.ts
WebUI/src/features/theme/: AppThemeContext.tsx
WebUI/src/features/tracker/: Tracker.types.ts
WebUI/src/lib/: HelperFunctions.ts
WebUI/src/lib/requests/: RequestError.ts  RequestManager.ts  RequestStatus.ts  types.ts
WebUI/src/lib/storage/: AppStorage.ts
crates/: .public-release-stamp
crates/anki-server/: Cargo.toml
crates/anki-server/src/: lib.rs
crates/audio-server/: Cargo.toml
crates/audio-server/src/: handlers.rs  state.rs
crates/core/: Cargo.toml
crates/novel-server/: Cargo.toml
crates/novel-server/src/: error.rs  lib.rs  state.rs  types.rs
crates/novel-server/src/routes/: fonts.rs  mod.rs
crates/ocr-server/: Cargo.toml
crates/ocr-server/src/: handlers.rs  jobs.rs  language.rs  lib.rs  logic.rs  merge.rs  state.rs
crates/ocr-server/tests/: merge_regression.rs  validate_submission.rs
crates/sync-server/: Cargo.toml  build.rs
crates/sync-server/src/: error.rs  lib.rs  merge.rs  state.rs  types.rs
crates/sync-server/src/backend/: google_drive.rs  mod.rs
crates/sync-server/src/routes/: auth.rs  config.rs  mod.rs  sync.rs
crates/yomitan-server/: Cargo.toml
crates/yomitan-server/src/: handlers.rs  import.rs  lib.rs  lookup.rs  state.rs
crates/yomitan-server/src/deinflector/: chinese.rs  english.rs  french.rs  mod.rs  portuguese.rs  spanish.rs  tests.rs  transformer.rs
crates/yomitan-server/src/deinflector/arabic/: transforms.json
crates/yomitan-server/src/deinflector/french/: transforms.json
crates/yomitan-server/src/deinflector/japanese/: mod.rs  transforms.json
crates/yomitan-server/src/deinflector/korean/: mod.rs  transforms.json
crates/yomitan-server/src/deinflector/latin/: transforms.json
crates/yomitan-server/src/deinflector/portuguese/: transforms.json
crates/yomitan-server/src/deinflector/spanish/: transforms.json
crates/yomitan-server/src/deinflector/tagalog/: transforms.json
crates/yomitan-server/src/deinflector/test-data/: arabic-tests.json  english-tests.json  french-tests.json  japanese-tests.json  korean-tests.json  portuguese-tests.json  spanish-tests.json
docs/: .public-release-stamp
packaging/: .public-release-stamp
packaging/flatpak/: io.github.kolbyml.Manatan.yml  site-index.html  validate.py
(+109 files in other folders)
