[package]
name = "mangatan-anki-server"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
axum.workspace = true 
base64.workspace = true 
reqwest.workspace = true 
serde.workspace = true 
serde_json .workspace = true 

[lints]
workspace = true
