[package]
name = "mangatan-core"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = []
embed-jre = []

[dependencies]
tracing.workspace = true
zip.workspace = true

[lints]
workspace = true
