[package]
name = "manatan-sync-server"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
# Core
anyhow.workspace = true
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
bytes.workspace = true
tower-http.workspace = true
base64.workspace = true
reqwest = { workspace = true, features = ["rustls-tls-webpki-roots"] }

# Google Drive v7 (re-exports hyper, hyper_rustls, hyper_util, yup_oauth2)
google-drive3 = "7"

# Compression
flate2 = "1.0"

# Storage
sled = "0.34"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
async-trait = "0.1"
urlencoding = "2.1"
http-body-util = "0.1"
mime = "0.3"


[lints]
workspace = true
