[package]
name = "manatan-sync-server"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
# Core
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
bytes.workspace = true
futures.workspace = true
reqwest = { workspace = true, features = ["rustls-tls-webpki-roots"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true

# Google Drive v7 (re-exports hyper, hyper_rustls, hyper_util, yup_oauth2)
google-drive3 = "7"

# Compression
flate2 = "1.0"

# Storage
sled = "0.34"

# Utilities
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
http-body-util = "0.1"
mime = "0.3"
sha2 = "0.10"
thiserror = "2.0"
urlencoding = "2.1"
uuid = { version = "1", features = ["v4"] }

[lints]
workspace = true
